config/kubernetes/staging/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-a-query-ingress
  namespace: track-a-query-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: app-secrets
    external-dns.alpha.kubernetes.io/set-identifier: track-a-query-ingress-track-a-query-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=track-a-query-staging"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600" # adds 600 to 30 seconds from elsewhere
spec:
  ingressClassName: modsec
  tls:
    - hosts:
      - staging.track-a-query.service.justice.gov.uk
      secretName: track-a-query-certificate
  rules:
    - host: staging.track-a-query.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: track-a-query-service
                port:
                  number: 3000
