config/kubernetes/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: track-a-query-ingress
  namespace: track-a-query-staging
spec:
  tls:
    - hosts:
      - staging.track-a-query.service.justice.gov.uk
      secretName: track-a-query-certificate
  rules:
  - host: staging.track-a-query.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: track-a-query-service
          servicePort: 3000
